fix: first block alert under dark mode

--- a/src/newUi.scss
+++ b/src/newUi.scss
@@ -89,6 +89,12 @@ $secondary-color-dark: #191c21;
   --network-data-connected-border: #44a32e;
   --tools-input-background: #0d1117;
   --background-network-select: #0d1117;
+
+  .alert.alert-info {
+    color: #A7C9FF;
+    background-color: #0D1A2B;
+    border-color: #3A72B8;
+  }
 }
 
 @font-face {
